AUTOMAKE_OPTIONS=subdir-objects
ACLOCAL_AMFLAGS=-I m4

nanocube_webconfigdir=${prefix}
nobase_dist_nanocube_webconfig_SCRIPTS=\
bin/nanocube_webconfig.py \
bin/nanocube_webconfig

nanocube_webdir=${prefix}/share/nanocube/web
nobase_dist_nanocube_web_DATA= \
Gruntfile.js \
index.html \
nanocubes.css \
dist/Nanocube.js \
dist/Nanocube.js.map \
lib/jsep/jsep.js \
lib/jsep/jsep.min.js.map \
lib/jsep/jsep.min.js \
lib/jquery/jquery.slim.min.js \
lib/jquery/jquery.slim.js \
lib/jquery/core.js \
lib/jquery/jquery.min.js \
lib/jquery/jquery.min.map \
lib/jquery/jquery.slim.min.map \
lib/jquery/jquery.js \
lib/requirejs/bin/r.js \
lib/requirejs/README.md \
lib/requirejs/require.js \
lib/requirejs/package.json \
lib/leaflet-draw/leaflet.draw-src.css \
lib/leaflet-draw/leaflet.draw.css \
lib/leaflet-draw/images/spritesheet-2x.png \
lib/leaflet-draw/images/layers.png \
lib/leaflet-draw/images/marker-icon.png \
lib/leaflet-draw/images/marker-icon-2x.png \
lib/leaflet-draw/images/spritesheet.svg \
lib/leaflet-draw/images/marker-shadow.png \
lib/leaflet-draw/images/layers-2x.png \
lib/leaflet-draw/images/spritesheet.png \
lib/leaflet-draw/leaflet.draw.js \
lib/leaflet-draw/leaflet.draw-src.js \
lib/leaflet-draw/leaflet.draw-src.map \
lib/canvaslayer/L.CanvasLayer.js \
lib/leaflet/leaflet.js \
lib/leaflet/images/layers.png \
lib/leaflet/images/marker-icon.png \
lib/leaflet/images/marker-icon-2x.png \
lib/leaflet/images/marker-shadow.png \
lib/leaflet/images/layers-2x.png \
lib/leaflet/leaflet.js.map \
lib/leaflet/leaflet-src.js.map \
lib/leaflet/leaflet.css \
lib/leaflet/leaflet-src.js \
lib/resize-drag/resize-drag.js \
lib/d3/d3.min.js \
lib/d3/package.js \
lib/d3/d3.node.js \
lib/d3/d3.js \
lib/sprintf-js/sprintf.min.js \
lib/sprintf-js/angular-sprintf.min.js.map \
lib/sprintf-js/sprintf.min.map \
lib/sprintf-js/sprintf.min.js.map \
lib/sprintf-js/angular-sprintf.min.js \
lib/sprintf-js/angular-sprintf.min.map \
lib/interact.js/interact.min.js \
lib/interact.js/dist/interact.min.js.map \
lib/interact.js/interact.js \
lib/colorbrewer/colorbrewer.css \
lib/colorbrewer/index.js \
lib/colorbrewer/README.md \
lib/colorbrewer/package.json \
lib/colorbrewer/LICENSE.txt \
src/main.js \
src/Nanocube3/Heatmap.js \
src/Nanocube3/PolygonMap.js \
src/Nanocube3/Nanocube4.js \
src/Nanocube3/Viewer.js \
src/Nanocube3/GroupedBarChart.js \
src/Nanocube3/Timeseries.js \
src/Nanocube3/Expression.js \
src/banner.js \
src/footer.js


